--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,10 @@
 name: GitHub Actions Demo
 on: [push]
 jobs:
-
   First_trial_job:    #Job name
     runs-on: ubuntu-latest    #Name of an Operating System
     steps:
-      - name: Job Info
+      - name: Job_Info
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."    #${{ ... }}
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
