--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest    #Name of an Operating System
     steps:
       - name: Job_Info
-        run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."    #${{ ... }}
-        #run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."    #${{ ... }}
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
         #run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
