--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,6 @@ jobs:
     steps:
       - name: Job_Info
         run: |
-          echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."    #${{ ... }}
+          echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
           echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
         #run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
