--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,8 +4,14 @@ jobs:
   First_trial_job:    #Job name
     runs-on: ubuntu-latest    #Name of an Operating System
     steps:
+      - uses: actions/checkout@v3
       - name: Job_Info
         run: |
           echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
           echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
         #run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: install wandb through python script
+        run: |
+          pip install -r requirements.txt
+          python ci.py
+
