--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -1,9 +1,10 @@
 on: push
 
 jobs:
-  secrets:
-  runs-on: ubuntu-latest
-  steps:
-    run: echo $WANDB_SEC
-  env:
-    SEC_VAR: ${{secrets.WANDB_SEC}}
+  First_trial_job:
+    secrets:
+    runs-on: ubuntu-latest
+    steps:
+      run: echo $WANDB_SEC
+    env:
+      SEC_VAR: ${{secrets.WANDB_SEC}}
